[package]
name = "passworld"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/r41ngee/passworld"
license = "MIT"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
rand = "0.10.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
